plugins_LTLIBRARIES = shape.la

shape_la_SOURCES = dbffile.cc shape.cc shape_io.cc shape_featureset.cc shape_index_featureset.hh dbffile.hh shapefile.cc shape_featureset.hh shape_io.hh shp_index.cc dbf_test.cc shapefile.hh shape.hh shape_index_featureset.cc shp_index.hh

shape_la_LIBDADD = 
shape_la_LDFLAGS = -module -version-info 0:0:0 -lpthread
shape_la_CXXFLAGS = -I$(top_srcdir)/include

